--- a/src/app/photo/photo.component.html
+++ b/src/app/photo/photo.component.html
@@ -1,2 +1,4 @@
  <!-- <i [ngStyle]="setPaddingBottom()"></i> -->
-  <img src="{{getUrl()}}" class='container' [dragula]='image.url'>
+  <i [style.padding-bottom]="paddingBottom"></i>
+  <img src="{{getUrl()}}" [dragula]='image.url' >
+
