--- a/src/app/photo/photo.component.html
+++ b/src/app/photo/photo.component.html
@@ -1,4 +1,4 @@
  <!-- <i [ngStyle]="setPaddingBottom()"></i> -->
   <i [style.padding-bottom]="paddingBottom"></i>
-  <img src="{{getUrl()}}" [dragula]='image.url' >
+  <img src="{{getUrl()}}" >
 
