--- a/src/app/grid-container/grid-container.component.scss
+++ b/src/app/grid-container/grid-container.component.scss
@@ -41,8 +41,100 @@ div {
   //background-color: violet;
   position: relative;
   display: inline-block;
+
+  &.image-holdernot:not(.gu-mirror) {
+    animation:scaleIt 100ms;
+
+    &:hover {
+      filter: brightness(110%)
+    }
+  }
 }
 
- div:hover {
-   filter: brightness(110%)
- }
+.gu-mirror {
+  position: fixed !important;
+  margin: 0 !important;
+  z-index: 9999 !important;
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  transition: 1s all;
+  transform: scale(.5);
+
+  // scale above isnt working with the animation below
+ // webkit-animation: wiggle 0.3s 0s infinite ease-in;
+ // animation: wiggle 0.3s 0s infinite ease-in;
+}
+
+@keyframes scaleIt {
+
+  0% {
+    display: none;
+    opacity: 0;
+  }
+  1% {
+    display: block;
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: .2;
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes wiggle {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  25% {
+    -webkit-transform: rotate(2deg);
+  }
+  75% {
+    -webkit-transform: rotate(-2deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    transform: rotate(-2deg);
+  }
+  25% {
+    transform: rotate(2deg);
+  }
+  75% {
+    transform: rotate(-2deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.gu-hide {
+  display: none !important;
+}
+.gu-unselectable {
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+
+.ex-over{
+    filter: drop-shadow(0px 0px 10px rgba(0,0,0,.5));
+}
+
+.separator {
+  width: 2px !important;
+  background-color: cornflowerblue;
+  float: left;
+  border: 2px solid cornflowerblue ;
+  border-radius: 2px;
+}
+
+.gu-copy:not(.gu-mirror){
+  opacity: .2;
+}
