--- a/src/app/grid-container/grid-container.component.scss
+++ b/src/app/grid-container/grid-container.component.scss
@@ -37,13 +37,13 @@ section::after {
 	}
 
 div {
-  margin: 20px;
+  margin: 16px;
   //background-color: violet;
   position: relative;
   display: inline-block;
 
-  &.image-holdernot:not(.gu-mirror) {
-    animation:scaleIt 100ms;
+  &.image-holder:not(.gu-mirror) {
+   // animation:scaleIt 350ms;
 
     &:hover {
       filter: brightness(110%)
@@ -127,12 +127,25 @@ div {
     filter: drop-shadow(0px 0px 10px rgba(0,0,0,.5));
 }
 
+
 .separator {
-  width: 2px !important;
+ width: 0;
+ //height: 100%;
+ padding: 0;
+ margin: 0;
+ position: relative; 
+}
+.separator::before {
+  width: 0px !important;
+  height: 100%;
   background-color: cornflowerblue;
-  float: left;
-  border: 2px solid cornflowerblue ;
+  border-left: 2px solid cornflowerblue ;
+  border-right: 2px solid cornflowerblue ;
+  content: '';
   border-radius: 2px;
+  position: absolute;
+  top: 0;
+  left: -2px;
 }
 
 .gu-copy:not(.gu-mirror){
