--- a/src/app/grid-container-sortable/grid-container-sortable.component.scss
+++ b/src/app/grid-container-sortable/grid-container-sortable.component.scss
@@ -10,8 +10,9 @@ section::after {
 }
 
 div {
-  margin: 20px;
+  //margin: 20px;
   //background-color: violet;
+  border: 10px solid white;
   position: relative;
   display: inline-block;
 }
